# wiidrums

./: CMakeLists.txt  README
cmake/modules/: FindPHONON.cmake  FindQwt5.cmake  FindWiiuse.cmake  LibFindMacros.cmake
lib/: README  agr-memcpy.patch
lib/agr/: AGR.sln  AGR_readme.txt  Makefile
lib/agr/doc/: Doxyfile
lib/agr/doc/html/: annotated.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_rela.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherits.html  main.html  namespacemembers.html  namespacemembers_type.html  namespaces.html  pages.html  todo.html  tree.html
lib/agr/include/: AGRVersion.h  Clustering.h  GestureRecogniser.h  HMM.h  KmeansClustering.h  Movement.h  MovementRecogniser.h  Vocabulary.h
lib/agr/lib/: AGR.lib  AGR_d.lib
lib/agr/samples/GestureCreator/include/: BaumWelchDlg.h  ButtonView.h  GestureCreator.h  GestureCreatorDoc.h  InfoView.h  MainFrm.h  Movement3DView.h  NewGestureDlg.h  TreeInfoView.h  WiimoteManager.h  stdafx.h
lib/agr/samples/GestureCreator/scripts/: GestureCreator.aps  GestureCreator.rc  GestureCreator.vcproj  GestureCreator.vcproj.vspscc  resource.h
lib/agr/samples/GestureCreator/src/: BaumWelchDlg.cpp  ButtonView.cpp  GestureCreator.cpp  GestureCreatorDoc.cpp  InfoView.cpp  MainFrm.cpp  Movement3DView.cpp  NewGestureDlg.cpp  TreeInfoView.cpp  WiimoteManager.cpp  stdafx.cpp
lib/agr/samples/prototype/: WiimoteTest.sln
lib/agr/samples/prototype/include/: Accelerometer.h  MFCGLView.h  MainFrm.h  WiiAccelerometer.h  (+5 more)
lib/agr/samples/sampleApp/: MSSCCPRJ.SCC
lib/agr/scripts/: AGRlib.vcproj  AGRlib.vcproj.vspscc
lib/agr/src/: Clustering.cpp  GestureRecogniser.cpp  HMM.cpp  KmeansClustering.cpp  Movement.cpp  MovementRecogniser.cpp  Vocabulary.cpp
lib/agr/tests/: MSSCCPRJ.SCC
lib/agr/tests/include/: SampleTest.h  TestClustering.h  TestGestureRecogniser.h  TestHMM.h  TestMovement.h  TestMovementRecogniser.h  TestVector3int.h  TestVocabulary.h
lib/agr/tests/scripts/: GRFile.txt  GRGesture1.txt  GRGesture2.txt  GRGesture3.txt  GRVoc1.txt  GRVoc2.txt  Makefile  after.txt  before.txt  hmm.txt  report.xsl  unitTesting.vcproj  unitTesting.vcproj.vspscc  vocabulary.txt
lib/agr/tests/src/: SampleTest.cpp  TestClustering.cpp  TestGestureRecogniser.cpp  TestHMM.cpp  TestMovement.cpp  TestMovementRecogniser.cpp  TestVector3int.cpp  TestVocabulary.cpp  main.cpp
src/: CMakeLists.txt
src/qwt-tab/: CMakeLists.txt  README  main.cpp  plot.cpp  plot.h  tabdialog.cpp  tabdialog.h
src/wiidrums/: CMakeLists.txt  Makefile  wiidrums.cpp  wiimote.cpp  wiimotemanager.cpp  wiimotemanager.h  wiimoteplot.cpp  wiimoteplot.h  wiimotes.cpp  wiiplot.cpp  wiiplot.h
src/wiidrums/audio/: audioobject.cpp  audioobject.h  genericaudioobject.cpp  genericaudioobject.h  genericmediaobject.cpp  genericmediaobject.h
src/wiidrums/gui/: simplegui.cpp  simplegui.h  wiimoteview.cpp  wiimoteview.h
src/wiidrums/misc/: plotlist.cpp  plotlist.h
src/wiidrums/wiimote/: wiimote.cpp  wiimote.h  wiimotemanager.cpp  wiimotemanager.h  wiimotes.cpp  wiimotes.h
(+137 files in other folders)
